Added more piece classes